--- a/Notification.Presentation/appsettings.json
+++ b/Notification.Presentation/appsettings.json
@@ -103,7 +103,9 @@
   "Serilog": {
     "Using": [
       "Serilog.Exceptions",
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Grafana.Loki",
+      "Elastic.Serilog.Sinks"
     ],
     "Enrich": [
       "WithExceptionDetails"
@@ -126,7 +128,7 @@
     "WriteTo": [
       {
         "Name": "Console"
-      } /*,
+      },
       {
         "Name": "File",
         "Args": {
@@ -135,9 +137,18 @@
         }
       },
       {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "infinity-net-{0:app}-{1:yyyy.MM.dd}"
+        }
+      },
+      {
         "Name": "GrafanaLoki",
-        "Args": { "uri": "http://localhost:3100" }
-      }*/
+        "Args": {
+          "uri": "http://localhost:3100"
+        }
+      }
     ]
   }
 
