--- a/Relationship.Presentation/appsettings.json
+++ b/Relationship.Presentation/appsettings.json
@@ -18,7 +18,8 @@
 
   "GrpcServers": {
     "IdentityService": "https://localhost:61001",
-    "ProfileService": "https://localhost:61002"
+    "ProfileService": "https://localhost:61002",
+    "FileService": "https://localhost:61010"
   },
 
   "Cors": {
@@ -91,7 +92,9 @@
   "Serilog": {
     "Using": [
       "Serilog.Exceptions",
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Grafana.Loki",
+      "Elastic.Serilog.Sinks"
     ],
     "Enrich": [
       "WithExceptionDetails"
@@ -114,7 +117,7 @@
     "WriteTo": [
       {
         "Name": "Console"
-      } /*,
+      },
       {
         "Name": "File",
         "Args": {
@@ -123,9 +126,18 @@
         }
       },
       {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "infinity-net-{0:app}-{1:yyyy.MM.dd}"
+        }
+      },
+      {
         "Name": "GrafanaLoki",
-        "Args": { "uri": "http://localhost:3100" }
-      }*/
+        "Args": {
+          "uri": "http://localhost:3100"
+        }
+      }
     ]
   }
 
