--- a/Docker/elk-stack/logstash/pipeline/logstash.conf
+++ b/Docker/elk-stack/logstash/pipeline/logstash.conf
@@ -7,7 +7,8 @@ input {
 
 output {
   elasticsearch {
-    hosts => "base-microservice-elasticsearch:9200"
-	index => "base-microservices-%{app}"
+    hosts => "infinity-net-elasticsearch:9200"
+	index => "infinity-net-%{app}-%{+yyyy.MM.dd}"
   }
+stdout { codec => rubydebug }
 }
