--- a/Mail.Presentation/appsettings.json
+++ b/Mail.Presentation/appsettings.json
@@ -50,7 +50,9 @@
   "Serilog": {
     "Using": [
       "Serilog.Exceptions",
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Grafana.Loki",
+      "Elastic.Serilog.Sinks"
     ],
     "Enrich": [
       "WithExceptionDetails"
@@ -73,7 +75,7 @@
     "WriteTo": [
       {
         "Name": "Console"
-      } /*,
+      },
       {
         "Name": "File",
         "Args": {
@@ -82,9 +84,18 @@
         }
       },
       {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "infinity-net-{0:app}-{1:yyyy.MM.dd}"
+        }
+      },
+      {
         "Name": "GrafanaLoki",
-        "Args": { "uri": "http://localhost:3100" }
-      }*/
+        "Args": {
+          "uri": "http://localhost:3100"
+        }
+      }
     ]
   }
 
