--- a/Profile.Presentation/appsettings.json
+++ b/Profile.Presentation/appsettings.json
@@ -92,7 +92,9 @@
   "Serilog": {
     "Using": [
       "Serilog.Exceptions",
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Grafana.Loki",
+      "Elastic.Serilog.Sinks"
     ],
     "Enrich": [
       "WithExceptionDetails"
@@ -115,7 +117,7 @@
     "WriteTo": [
       {
         "Name": "Console"
-      } /*,
+      },
       {
         "Name": "File",
         "Args": {
@@ -124,9 +126,18 @@
         }
       },
       {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "infinity-net-{0:app}-{1:yyyy.MM.dd}"
+        }
+      },
+      {
         "Name": "GrafanaLoki",
-        "Args": { "uri": "http://localhost:3100" }
-      }*/
+        "Args": {
+          "uri": "http://localhost:3100"
+        }
+      }
     ]
   }
 
