--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,127 +120,128 @@ services:
       - infinity-net-network
     restart: unless-stopped
 
-  # infinity-net-tempo:
-    # image: grafana/tempo:main-bbe0435
-    # container_name: infinity-net-tempo
-    # command: [ "-config.file=/etc/tempo.yaml" ]
-    # volumes:
-      # - ./docker/grafana-stack/tempo/tempo.yml:/etc/tempo.yaml:ro
-      # - ./docker/grafana-stack/tempo/tempo-data:/tmp/tempo
-    # ports:
-      # - "3110:3100" # Tempo
-      # - "9411:9411" # zipkin
-      # - "4317:4317" # OTel
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-tempo:
+    image: grafana/tempo:main-bbe0435
+    container_name: infinity-net-tempo
+    command: [ "-config.file=/etc/tempo.yaml" ]
+    volumes:
+      - ./Docker/grafana-stack/tempo/tempo.yml:/etc/tempo.yaml:ro
+      - ./Docker/grafana-stack/tempo/tempo-data:/tmp/tempo
+    ports:
+      - "3110:3100" # Tempo
+      - "9411:9411" # zipkin
+      - "4317:4317" # OTel
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # infinity-net-loki:
-    # image: grafana/loki:main
-    # container_name: infinity-net-loki
-    # command: [ "-config.file=/etc/loki/local-config.yaml" ]
-    # volumes:
-      # - ./docker/grafana-stack/loki/loki-config.yaml:/etc/loki/loki-local-config.yaml
-    # ports:
-      # - "3100:3100"
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-loki:
+    image: grafana/loki:main
+    container_name: infinity-net-loki
+    command: [ "-config.file=/etc/loki/local-config.yaml" ]
+    volumes:
+      - ./Docker/grafana-stack/loki/loki-config.yaml:/etc/loki/loki-local-config.yaml
+    ports:
+      - "3100:3100"
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # promtail:
-    # image: grafana/promtail:latest
-    # volumes:
-      # - ./docker/grafana-stack/promtail/var/log:/var/log
-      # - ./docker/grafana-stack/promtail/promtail-config.yaml:/etc/promtail/config.yaml
-    # command: -config.file=/etc/promtail/config.yaml
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-promtail:
+    image: grafana/promtail:latest
+    container_name: infinity-net-promtail
+    volumes:
+      - ./Docker/grafana-stack/promtail/var/log:/var/log
+      - ./Docker/grafana-stack/promtail/promtail-config.yaml:/etc/promtail/config.yaml
+    command: -config.file=/etc/promtail/config.yaml
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # infinity-net-prometheus:
-    # image: prom/prometheus:main
-    # container_name: infinity-net-prometheus
-    # command:
-      # - --enable-feature=exemplar-storage
-      # - --config.file=/etc/prometheus/prometheus.yml
-    # volumes:
-      # - ./docker/grafana-stack/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    # ports:
-      # - "9090:9090"
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-prometheus:
+    image: prom/prometheus:main
+    container_name: infinity-net-prometheus
+    command:
+      - --enable-feature=exemplar-storage
+      - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+      - ./Docker/grafana-stack/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # infinity-net-grafana:
-    # image: grafana/grafana:10.1.0
-    # container_name: infinity-net-grafana
-    # environment:
-      # GF_SECURITY_ADMIN_USER: infinitynetUser
-      # GF_SECURITY_ADMIN_PASSWORD: Password@123
-    # volumes:
-      # - ./docker/grafana-stack/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
-      # - ./docker/grafana-stack/grafana/dashboards:/etc/grafana/provisioning/dashboards
-    # ports:
-      # - "3000:3000"
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-grafana:
+    image: grafana/grafana:10.1.0
+    container_name: infinity-net-grafana
+    environment:
+      GF_SECURITY_ADMIN_USER: infinitynetUser
+      GF_SECURITY_ADMIN_PASSWORD: Password@123
+    volumes:
+      - ./Docker/grafana-stack/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - ./Docker/grafana-stack/grafana/dashboards:/etc/grafana/provisioning/dashboards
+    ports:
+      - "3000:3000"
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # infinity-net-elasticsearch:
-    # image: elasticsearch:8.15.0
-    # container_name: infinity-net-elasticsearch
-    # environment:
-      # xpack.security.enabled: false
-      # discovery.type: single-node
-    # ulimits:
-      # memlock:
-        # soft: -1
-        # hard: -1
-      # nofile:
-        # soft: 65536
-        # hard: 65536
-    # cap_add:
-      # - IPC_LOCK
-    # volumes:
-      # - infinity-net-elasticsearch-data:/usr/share/elasticsearch/data
-    # ports:
-      # - "9200:9200"
-      # - "9300:9300"
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-elasticsearch:
+    image: elasticsearch:8.15.0
+    container_name: infinity-net-elasticsearch
+    environment:
+      xpack.security.enabled: false
+      discovery.type: single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - infinity-net-elasticsearch-data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # infinity-net-kibana:
-    # image: kibana:8.15.0
-    # container_name: infinity-net-kibana
-    # depends_on:
-      # [ infinity-net-elasticsearch ]
-    # environment:
-      # ELASTICSEARCH_HOSTS: http://infinity-net-elasticsearch:9200
-    # ports:
-      # - "5601:5601"
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-kibana:
+    image: kibana:8.15.0
+    container_name: infinity-net-kibana
+    depends_on:
+      [ infinity-net-elasticsearch ]
+    environment:
+      ELASTICSEARCH_HOSTS: http://infinity-net-elasticsearch:9200
+    ports:
+      - "5601:5601"
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
-  # infinity-net-logstash:
-    # image: logstash:8.15.0
-    # container_name: infinity-net-logstash
-    # depends_on:
-      # [ infinity-net-elasticsearch ]
-    # environment:
-      # LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-    # volumes:
-      # - ./docker/elk-stack/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
-      # - ./docker/elk-stack/logstash/pipeline:/usr/share/logstash/pipeline:ro
-    # ports:
-      # - "5044:5044"
-      # - "5000:5000/tcp"
-      # - "5000:5000/udp"
-      # - "9600:9600"
-    # networks:
-      # - infinity-net-network
-    # restart: unless-stopped
+  infinity-net-logstash:
+    image: logstash:8.15.0
+    container_name: infinity-net-logstash
+    depends_on:
+      [ infinity-net-elasticsearch ]
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    volumes:
+      - ./Docker/elk-stack/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+      - ./Docker/elk-stack/logstash/pipeline:/usr/share/logstash/pipeline:ro
+    ports:
+      - "5044:5044"
+      - "5000:5000/tcp"
+      - "5000:5000/udp"
+      - "9600:9600"
+    networks:
+      - infinity-net-network
+    restart: unless-stopped
 
 networks:
   infinity-net-network:
@@ -254,4 +255,4 @@ volumes:
   infinity-net-postgres-data:
   infinity-net-mongodb-data:
   infinity-net-minio-data:
-  #infinity-net-elasticsearch-data:
+  infinity-net-elasticsearch-data:
