feat: sign-up with google & facebook

--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -45,6 +45,35 @@
     "RefreshDuration": "2592000"
   },
 
+  "SocialOauth2": {
+    "Google": {
+      "ClientId": "your-google-client-id",
+      "ClientSecret": "your-google-client-secret",
+      "Scopes": [
+        "openid",
+        "profile",
+        "email"
+      ],
+      "RedirectUri": "http://localhost:3000/google-callback",
+      "AuthUri": "https://accounts.google.com/o/oauth2/v2/auth",
+      "TokenUri": "https://oauth2.googleapis.com/token",
+      "UserInfoUri": "https://www.googleapis.com/oauth2/v3/userinfo"
+    },
+
+    "Facebook": {
+      "ClientId": "your-facebook-app-id",
+      "ClientSecret": "your-facebook-app-secret",
+      "Scopes": [
+        "email",
+        "public_profile"
+      ],
+      "RedirectUri": "http://localhost:3000/facebook-callback",
+      "AuthUri": "https://www.facebook.com/v21.0/dialog/oauth",
+      "TokenUri": "https://graph.facebook.com/oauth/access_token",
+      "UserInfoUri": "https://graph.facebook.com/me?fields=id,name,email,picture.type(large)"
+    }
+  },
+
   "Swagger": {
     "Title": "Identity Service REST APIs",
     "ApiDocs": "identity-service-rest-api-service-dev",
