--- a/Mail.Presentation/appsettings.json
+++ b/Mail.Presentation/appsettings.json
@@ -23,6 +23,13 @@
     "Password": "Password@123"
   },
 
+  "Smtp": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "benlun99999@gmail.com",
+    "SenderPassword": "zqfsinzdpmxvifqv"
+  },
+
   "GrafanaStack": {
     "ServiceName": "MailService"
   },
